# cpp-pong

./: .gitignore  CMakeLists.txt  README.md
src/: ai_paddle.cpp  ball.cpp  color.cpp  game.cpp  interactive.cpp  location.cpp  main.cpp  paddle.cpp  player_paddle.cpp  renderer.cpp
src/include/: ai_paddle.h  ball.h  color.h  drawable.h  game.h  interactive.h  location.h  message_queue.h  paddle.h  player_paddle.h  renderer.h
